--- a/index.html
+++ b/index.html
@@ -27,29 +27,19 @@
     >
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Muhammad Nurul Musthofa</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+
         <div class="collapse navbar-collapse text-right" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
             <li class="nav-item">
-              <a class="nav-link" href="#layanan">tentang saya</a>
+              <a class="nav-link" href="#layanan">Tentang saya</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portofolio">Portofolio</a>
+              <a class="nav-link" href="#portofolio">PortoFolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#kontak">kontak person</a>
+              <a class="nav-link" href="#kontak">Kontak Person</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input type="text" name="search[terms]" id="Search_terms" value placeholder="Search" class="global-nav__search-terms">
-            <button name="button" type="submit" class="global-nav__search-button">
-              <i class="fas fa-search"></i>
-            </button>
           </form>
         </div>
       </div>
@@ -57,8 +47,8 @@
     <!-- banner -->
     <div class="container-fluid banner">
       <div class="container text-center">
-        <h4 class="display-6">welcome My Website</h4>
-        <h3 class="display-1">assalamualaikum</h3>
+        <h4 class="display-6">Welcome My Website</h4>
+        <h3 class="display-1">Assalamualaikum</h3>
         <a href="#layanan">
           <button type="button" class="btn btn-dark btn-lg">
             tentang saya
@@ -71,8 +61,8 @@
       <div class="container text-center">
         <h2 class="display-4" id="layanan">Tentang saya</h2>
         <p>
-          perkenalkan saya muhammad nurul musthofa biasa dipanggil musthofa,saya sedang berkuliah
-          disalah satu universitas di daerah kalibata jakarta dengan mengambil jurusan teknik informatika
+          Perkenalkan saya Muhammad Nurul Musthofa biasa dipanggil musthofa,saya sedang berkuliah
+          disalah satu universitas di daerah kalibata jakarta dengan mengambil jurusan Teknik informatika
           umur saya 19 tahun  
         </p>
         <div class="row pt-4">
@@ -88,10 +78,7 @@
             <span class="lingkaran"><i class="fas fa-laptop fa-5x"></i></span>
             <h3 class="mt-3">Kemampuan</h3>
             <p>
-             - menguasai microsoft office
-             - menguasai software editing (canva,adobe premier,ilustrator dan photoshop)
-             - mampu berkomunikasi dengan baik
-             - mampu bekerja dengan team dan juga bekerja secara independent
+              menguasai microsoft office, menguasai software editing (canva,adobe premier,ilustrator dan photoshop), Mampu Mengoprasikan Microsoft Office , Mampu berkomunikasi dengan baik dan Mampu bekerja dengan team dan juga bekerja secara independent
             </p>
           </div>
 
@@ -99,13 +86,9 @@
             <span class="lingkaran"
               ><i class="	fas fa-user-friends fa-5x"></i
             ></span>
-            <h3 class="mt-3">pengalaman organisasi</h3>
+            <h3 class="mt-3">Pengalaman Organisasi</h3>
             <p>
-              BEM universitas trilogi
-              Karang taruna
-              Osis smp yapimda
-              Ldk assalam universitas trilogi
-              Himatika Universitas trilogi
+              BEM Universitas Trilogi, Karang taruna, Osis SMK Yapimda ,Ldk Assalam Universitas Trilogi dan Himatika Universitas trilogi
             </p>
           </div>
         </div>
@@ -128,7 +111,7 @@
                 height="150"
               />
               <div class="card-body">
-                <h5 class="card-title" >konten kreator </h5>
+                <h5 class="card-title" >Konten Kreator </h5>
                 <p class="card-text">
                  mampu menjadi konten kreator untuk instagram,tiktok untuk menarik sekitar
                 </p>
@@ -145,9 +128,9 @@
                 height="150"
               />
               <div class="card-body">
-                <h5 class="card-title">sertifikat LSP Multimedia</h5>
+                <h5 class="card-title">Sertifikat LSP Multimedia</h5>
                 <p class="card-text">
-                  mampu mengoprasikan komputer serta mampu mengoperasikan software editing video seperti (adobe ilustrator,photoshop,canva,adobe premier dan adobe after effect)
+                  Mampu mengoprasikan komputer serta mampu mengoperasikan software editing video seperti (adobe ilustrator,photoshop,canva,adobe premier dan adobe after effect)
                   dalam bidang multimedia 
                 </p>
               </div>
@@ -162,9 +145,9 @@
                 height="150"
               />
               <div class="card-body">
-                <h5 class="card-title">administrasi publik kelurahan kebagusan</h5>
+                <h5 class="card-title">Administrasi Publik Kelurahan Kebagusan</h5>
                 <p class="card-text">
-                  mampu mengoprasikan microsoft office dan juga sebagai adminitrasi untuk publik di wilayah kebagusan jakarta seatan selama 2 bulan 
+                  Mampu mengoprasikan Microsoft office dan juga sebagai adminitrasi untuk publik di wilayah kebagusan jakarta seatan selama 2 bulan 
                 </p>
               </div>
             </div>
@@ -178,7 +161,7 @@
                 height="200"
               />
               <div class="card-body">
-                <h5 class="card-title">mampu membuat website </h5>
+                <h5 class="card-title">Mampu Membuat Website </h5>
                 <p class="card-text">
                   saya mampu membuat website dengan menggunakan booster 5 dengan mengunakan html,css,javascript 
                 </p>
@@ -189,7 +172,7 @@
     <!-- kontak person  -->
     <div class="container-fluid pt-5 pb-5">
       <div class="container">
-        <h2 class="display-3 text-center" id="kontak">kontak Personal</h2>
+        <h2 class="display-3 text-center" id="kontak">Kontak Personal</h2>
         <div class="row pt-4 gx-4 gy-4">
           <div class="col-md-4 text-center tim">
             <img
@@ -199,7 +182,7 @@
           
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="6efbfa09-f0c9-4c82-82d0-80f48bd77a72-removebg-preview (1).jpg"class="rounded-circle mb-2" style="width:200px;height:200px;">
+            <img src="6efbfa09-f0c9-4c82-82d0-80f48bd77a72-removebg-preview (1).jpg"class="rounded-circle mb-1" style="width:200px;height:200px;">
 
             <h2>Muhammad Nurul Musthofa</h2>
             <h4>Multimedia(programer)</h4>
@@ -218,7 +201,7 @@
     </div>
    
     <div class="container text-center pt-5 pb-5">
-       website belajar
+       Website Muhammad Nurul Musthofa 
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
