--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container text-center">
         <h2 class="display-4" id="layanan">Tentang saya</h2>
         <p>
-          Perkenalkan saya Muhammad Nurul Musthofa biasa dipanggil musthofa,saya sedang berkuliah
+          Perkenalkan saya Muhammad Nurul Musthofa biasa dipanggil musthofa. Saya sedang berkuliah
           disalah satu universitas di daerah kalibata jakarta dengan mengambil jurusan Teknik informatika
           umur saya 19 tahun  
         </p>
@@ -70,7 +70,7 @@
             <span class="lingkaran"><i class="	fas fa-clipboard fa-5x"></i></span>
             <h3 class="mt-3">Pengalaman kerja </h3>
             <p>
-             saya pernah bekerja dikelurahan kebagusan selama 2 bulan sebagai administrasi publik
+             Saya Pernah Bekerja Dikelurahan Kebagusan selama 2 bulan sebagai Administrasi Publik
             </p>
           </div>
 
@@ -78,7 +78,7 @@
             <span class="lingkaran"><i class="fas fa-laptop fa-5x"></i></span>
             <h3 class="mt-3">Kemampuan</h3>
             <p>
-              menguasai microsoft office, menguasai software editing (canva,adobe premier,ilustrator dan photoshop), Mampu Mengoprasikan Microsoft Office , Mampu berkomunikasi dengan baik dan Mampu bekerja dengan team dan juga bekerja secara independent
+              Menguasai Microsoft Office, Menguasai Software Editing (Canva,Adobe Premier,Ilustrator dan Photoshop), Mampu Mengoprasikan Microsoft Office , Mampu berkomunikasi dengan baik dan Mampu bekerja dengan team dan juga bekerja secara independent
             </p>
           </div>
 
@@ -99,7 +99,7 @@
       <div class="container text-center">
         <h2 class="display-3" id="portofolio">Portofolio</h2>
         <p>
-          ini adalah portofolio saya dalam bidang keahlian multimedia dan saya sedang mengeluti bidang kreatif teknik informatika
+          ini adalah portofolio saya dalam bidang keahlian Multimedia dan saya sedang mengeluti bidang kreatif Teknik Informatika
         </p>
         <div class="row pt-4 gx-4 gy-4">
           <div class="col-md-4">
@@ -113,7 +113,7 @@
               <div class="card-body">
                 <h5 class="card-title" >Konten Kreator </h5>
                 <p class="card-text">
-                 mampu menjadi konten kreator untuk instagram,tiktok untuk menarik sekitar
+                 Mampu menjadi Konten Kreator untuk instagram,tiktok untuk menarik sekitar
                 </p>
               </div>
             </div>
@@ -130,8 +130,8 @@
               <div class="card-body">
                 <h5 class="card-title">Sertifikat LSP Multimedia</h5>
                 <p class="card-text">
-                  Mampu mengoprasikan komputer serta mampu mengoperasikan software editing video seperti (adobe ilustrator,photoshop,canva,adobe premier dan adobe after effect)
-                  dalam bidang multimedia 
+                  Mampu mengoprasikan komputer serta mampu mengoperasikan software editing video seperti (Adobe ilustrator,Photoshop,Canva,Adobe Premier dan Adobe After Effect)
+                  dalam bidang Multimedia 
                 </p>
               </div>
             </div>
